<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="319dp" />

    <EditText
        android:id="@+id/enter_password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_password_edit_text_hint"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="274dp" />

    <EditText
        android:id="@+id/enter_mail_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_email_edit_text_hint"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="215dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/forgot_password_button_text"
        app:layout_constraintBottom_toTopOf="@+id/create_new_account_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/create_new_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="528dp" />
</androidx.constraintlayout.widget.ConstraintLayout>